@@ -258,7 +258,7 @@ void bindScriptNode()
 		.def( "copy", &ScriptNode::copy, ( arg_( "parent" ) = object(), arg_( "filter" ) = object() ) )
 		.def( "cut", &ScriptNode::cut, ( arg_( "parent" ) = object(), arg_( "filter" ) = object() ) )
 		.def( "paste", &ScriptNode::paste, ( arg_( "parent" ) = object() ) )
-		.def( "deleteNodes", &ScriptNode::deleteNodes, ( arg_( "parent" ) = object(), arg_( "filter" ) = object() ) )
+		.def( "deleteNodes", &ScriptNode::deleteNodes, ( arg_( "parent" ) = object(), arg_( "filter" ) = object(), arg_( "reconnect" ) = true ) )
 		.def( "execute", &ScriptNode::execute, ( arg_( "parent" ) = object() ) )
 		.def( "evaluate", &ScriptNode::evaluate, ( arg_( "parent" ) = object() ) )
 		.def( "scriptExecutedSignal", &ScriptNode::scriptExecutedSignal, return_internal_reference<1>() )
